# mcp-enterprise-bridge

./: .gitignore  Caddyfile  Makefile  README.md  SESSION_PROMPT.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  debug_db.py  main.py  pyproject.toml  requirements.txt  start.sh
backend/api/middleware/: auth_middleware.py  input_size_limit.py  metrics_middleware.py  rate_limiter.py  security_headers.py
backend/api/routes/: agent.py  analytics.py  approval_templates.py  approvals.py  audit.py  auth.py  config.py  databases.py  metrics.py  permissions.py  query_templates.py  users.py
backend/core/: audit_retention.py  config.py  database.py  email_notifier.py  logging.py  notifications.py  otel.py  redis_client.py  security.py  sentry.py  websocket_manager.py
backend/graph/: nodes.py  state.py  workflow.py
backend/mcp_servers/: base_server.py  rest_server.py  sql_server.py
backend/tests/: test_fallback_intent.py  test_integration.py  test_rest_server.py  test_sql_validation.py
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/nginx/: nginx.conf
frontend/src/: App.tsx
infra/terraform/: alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf
nginx/: default.conf
pgbouncer/: pgbouncer.ini
scripts/: curl-commands.sh  test-e2e.sh
secrets/: cert.pem  groq_api_key.txt  jwt_secret.txt  key.pem
(+45 files in other folders)
